package cafe;

public class BoissonCreme extends DecorateurIngredient {

    public BoissonCreme(Boisson b) {
        super(0.55," Creme",b);
    }

}
