@startuml

title __CAFE's Class Diagram__\n

  package  {
    package cafe {
      abstract class Boisson {
          # description : String
          + getDescription()
          {abstract} + cout()
          + toString()
      }
    }
  }
  

  package  {
    package cafe {
      class BoissonChantilly {
          + BoissonChantilly()
      }
    }
  }
  

  package  {
    package cafe {
      class BoissonCreme {
          + BoissonCreme()
      }
    }
  }
  

  package  {
    package cafe {
      class Colombia {
          + Colombia()
          + cout()
      }
    }
  }
  

  package  {
    package cafe {
      class Deca {
          + Deca()
          + cout()
      }
    }
  }
  

  package  {
    package cafe {
      abstract class DecorateurIngredient {
          # prix : double
          + DecorateurIngredient()
          + getDescription()
          + cout()
      }
    }
  }
  

  package  {
    package cafe {
      class Expresso {
          + Expresso()
          + cout()
      }
    }
  }
  

  package  {
    package cafe {
      class PrincipaleCafe {
          {static} + main()
      }
    }
  }
  

  BoissonChantilly -up-|> DecorateurIngredient
  BoissonCreme -up-|> DecorateurIngredient
  Colombia -up-|> Boisson
  Deca -up-|> Boisson
  DecorateurIngredient -up-|> Boisson
  DecorateurIngredient o-- Boisson : composant
  Expresso -up-|> Boisson


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
